# GraphicLib

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  run.sh
src/: application.cpp  main.cpp  physics.cpp  window.cpp
src/include/: application.h  physics.h  window.h
